# Django_Postgre

./: .gitignore  pyproject.toml
config/: settings.py
news/: models.py
