[tool.poetry]
name = "postgresql"
version = "0.1.0"
description = ""
authors = ["NohSungwoo <shtjddn0817@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
